# py-monplugin

./: CHANGES.md  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: cicd.yml  run-tests.yml
monplugin/: __init__.py
tests/: test_mon.py
