[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
name = "monplugin"
readme = "README.md"
description = "Partial python port of perls Monitoring::Plugin"
version = "0.6.2"
requires-python = ">= 3.6"
authors = [
    { name = "Danijel Tasov", email = "danijel.tasov@consol.de" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: System :: Monitoring",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]


[tool.flit.sdist]
exclude = ["docs/", "stuff/"]
